--- a/controllers/activitylogs/config_form.yaml
+++ b/controllers/activitylogs/config_form.yaml
@@ -6,7 +6,7 @@
 name: ActivityLog
 
 # Model Form Field configuration
-form: @/plugins/dma/friends/models/activitylog/fields.yaml
+form: ~/plugins/dma/friends/models/activitylog/fields.yaml
 
 # Model Class name
 modelClass: DMA\Friends\Models\ActivityLog
