--- a/controllers/badges/config_list.yaml
+++ b/controllers/badges/config_list.yaml
@@ -3,8 +3,8 @@
 # ===================================
 
 # Model List Column configuration
-list: @/plugins/dma/friends/models/badge/columns.yaml
-filter: @/plugins/dma/friends/models/badge/config_filter.yaml
+list: ~/plugins/dma/friends/models/badge/columns.yaml
+filter: ~/plugins/dma/friends/models/badge/config_filter.yaml
 
 # Model Class name
 modelClass: DMA\Friends\Models\Badge
