--- a/models/reward/fields.yaml
+++ b/models/reward/fields.yaml
@@ -7,7 +7,7 @@ fields:
         label: Title
     toolbar:
         type: partial
-        path: @/plugins/dma/friends/partials/_content_toolbar.htm
+        path: ~/plugins/dma/friends/partials/_content_toolbar.htm
         cssClass: collapse-visible
 
 secondaryTabs:
