--- a/models/usergroup/fields.yaml
+++ b/models/usergroup/fields.yaml
@@ -6,14 +6,13 @@ fields:
     is_active:
         label: Group is active
         type: checkbox
-        default: True
-                
+        default: True        
     owner:
         label: Owner / Creator of the group
         type: recordfinder
-        list:  @/plugins/rainlab/user/models/user/columns.yaml
+        list:  ~/plugins/rainlab/user/models/user/columns.yaml
         prompt: Click the %s button to find an Owner / Creator group
-        nameFrom: name
+        valueFrom: name
         descriptionFrom: name
         span: left
         placeholder: -- select owner --  
@@ -21,7 +20,7 @@ fields:
     code:
         label: Code for join this group
         type: partial
-        path: @/plugins/dma/friends/models/usergroup/_code_field.htm
+        path: ~/plugins/dma/friends/models/usergroup/_code_field.htm
         span: right
 
     name:
