added Maatwebsite/Laravel-Excel library.  This is currently only used in a third party plugin.  However future versions will support Excel exports

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "nategood/httpful": "*",
         "mandrill/mandrill": "1.0.*",
         "hashids/hashids": "1.0.5",
-        "giggsey/libphonenumber-for-php": "~7.0"       
+        "giggsey/libphonenumber-for-php": "~7.0",
+        "maatwebsite/excel": "~2.0"       
     }
 }
