--- a/models/reward/fields.yaml
+++ b/models/reward/fields.yaml
@@ -17,7 +17,7 @@ secondaryTabs:
         #  Content tab 
         # ===================================
         description:
-            label: Description
+            label: Description 
             tab: Content
             span: left 
             type: richeditor
@@ -32,22 +32,24 @@ secondaryTabs:
             imageWidth: 500
         excerpt:
             label: Excerpt
-            description: a short amount of text about this badge.  This will be displayed in badge listings
+            commentAbove: a short amount of text about this badge.  This will be displayed in reward listings
             tab: Content
             type: richeditor
             size: huge
+            span: left
         fine_print: 
             label: The Fine Print
-            description: This is displayed on the Reward detail view and on the printed coupon.
+            commentAbove: This is displayed on the Reward detail view and on the printed coupon.
             tab: Content
             type: textarea
+            span: right
 
         # ===================================
         #  Configuration tab 
         # ===================================
         points:
             label: Points to redeem
-            description: The number of points required to redeem this reward
+            commentAbove: The number of points required to redeem this reward
             tab: Configuration
             type: number
             required: true
@@ -55,24 +57,24 @@ secondaryTabs:
             span: left
         barcode:
             label: Barcode Value
-            description: The value of the barcode printed on the coupon.
+            commentAbove: The value of the barcode printed on the coupon.
             tab: Configuration
             span: right
         inventory:
             label: Inventory
-            description: Number of reward items in inventory
+            commentAbove: Number of reward items in inventory
             tab: Configuration
             span: left
             type: number
         user_redeem_limit:
             label: User Redemption Limit 
-            description: The number of times a user can redeem this reward
+            commentAbove: The number of times a user can redeem this reward
             tab: Configuration
             span: right
             type: number
         enable_email:
             label: Email upon redemption
-            description: If checked send an email to the user if they redeem this reward
+            commentAbove: If checked send an email to the user if they redeem this reward
             tab: Configuration
             type: checkbox
         email_template:
@@ -82,7 +84,7 @@ secondaryTabs:
             type: dropdown
         enable_admin_email:
             label: Email a notification to administrators
-            description: When a reward has been redeemed send administrators a notification
+            commentAbove: When a reward has been redeemed send administrators a notification
             tab: Configuration
             type: checkbox
         admin_email_template:
@@ -101,7 +103,7 @@ secondaryTabs:
             span: right
         redemption_email:
             label: Redemption Email (NOTE: This field is legacy and will be removed in a future version)
-            description: If not blank, send an email to the recipient upon redemption with the specified text.
+            commentAbove: If not blank, send an email to the recipient upon redemption with the specified text.
             tab: Configuration
             type: textarea
         # ===================================
@@ -109,21 +111,21 @@ secondaryTabs:
         # ===================================
         date_begin:
             label: Beginning Date
-            description: If set, Reward can only be redeemed after this date.
+            commentAbove: If set, Reward can only be redeemed after this date.
             span: left
             tab: Publishing Options
             type: datepicker
             mode: datetime
         date_end:
             label: Ending Date
-            description: If set, Reward can only be redeemed before this date.
+            commentAbove: If set, Reward can only be redeemed before this date.
             span: right
             tab: Publishing Options
             type: datepicker
             mode: datetime
         is_hidden:
             label: Hide Reward
-            description: If checked hide this Reward from users until they meet the points requirement.
+            commentAbove: If checked hide this Reward from users until they meet the points requirement.
             tab: Publishing Options
             type: checkbox
         is_published:
