--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "mandrill/mandrill": "1.0.*",
         "hashids/hashids": "1.0.5",
         "giggsey/libphonenumber-for-php": "~7.0",
-        "maatwebsite/excel": "~2.0"       
+        "maatwebsite/excel": "~2.0",
+        "zircote/swagger-php": "2.*@dev"       
     }
 }
