--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -129,3 +129,22 @@ tabs:
                 P: Portrait
                 L: Landscape
             tab: Printer
+
+        # Mailchimp settings
+        mailchimp_integration:
+            label: Enable MailChip integration
+            comment: When enable the plugin will keep synchronized Friends members with a MailChimp list.
+            span: left
+            tab: MailChimp Integration
+            type: checkbox    
+            default: false    
+        mailchimp_api_key:
+            label: API key to access MailChimp
+            comment: Information on how to generate an API key can be found   here http://kb.mailchimp.com/accounts/management/about-api-keys
+            span: left
+            tab: MailChimp Integration
+        mailchimp_list_id:
+            label: MailChimp List ID where user will be subscribe/unsubscribe
+            comment: The list ID can be found under the settings of the MailChimp list.
+            span: left
+            tab: MailChimp Integration            
