--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "ellipsesynergie/api-response": "0.9.*",
-        "league/factory-muffin": "~2.1",
+        "league/factory-muffin": "^2.1",
         "twilio/sdk": "3.12.6",
         "j7mbo/twitter-api-php": "dev-master",
         "smirik/php-datetime-ago": "~1.0",
