- Implemented JWT tokens to all API Endpoints - Implemented Application model that allow the creation of application with two basic levels of access of the data of friends and the maximum duration of each token - Updated API documentation - Implemented Trait to validate the authenticated User access to the API - Implemented Middleware to validate the given token

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "giggsey/libphonenumber-for-php": "~7.0",
         "maatwebsite/excel": "~2.0",
         "zircote/swagger-php": "2.*",
-        "guzzlehttp/guzzle": "~6.0"       
+        "guzzlehttp/guzzle": "~6.0",
+        "namshi/jose": "^6.0"       
     }
 }
